<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/txt_setting_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_settings"
        android:textSize="@dimen/_50px_in720p"
        android:textColor="#111222" /> 
    
    <Button
	    android:id="@+id/btn_change_background"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
        android:textSize="@dimen/_50px_in720p"
	    android:text="@string/btn_change_bg" />
        
    <Button
	    android:id="@+id/btn_setting_to_main"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
        android:textSize="@dimen/_50px_in720p"
	    android:text="@string/btn_to_main" />
    
    <TextView 
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_settings_msg"
        android:textSize="@dimen/_30px_in720p" /> 
</LinearLayout>
