<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16px_in720p">
  
    <TextView 
        android:id="@+id/txt_to_musiclistq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text"
        android:textSize="@dimen/_50px_in720p"
        android:layout_gravity="center" /> 
    
    <LinearLayout 
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white9"
        android:orientation="vertical" >
        
        <LinearLayout 
            android:id="@+id/btn_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/_34px_in720p"
                 android:paddingRight="@dimen/_34px_in720p"
                 android:paddingTop="@dimen/_16px_in720p"
                 android:paddingBottom="@dimen/_16px_in720p"
            android:onClick="true"
        	android:padding="@dimen/_20px_in720p" >

		    <Button
		        android:id="@+id/btn_to_musiclist"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
        		android:textSize="@dimen/_50px_in720p"
		        android:text="@string/local_music" />
        </LinearLayout>
	    
        <ImageView
            android:id="@+id/img_line"
            style="@style/img_gray_line" 
            android:contentDescription="@string/content_null"/>
   
        <LinearLayout 
            android:id="@+id/btn_local1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/_34px_in720p"
                 android:paddingRight="@dimen/_34px_in720p"
                 android:paddingTop="@dimen/_16px_in720p"
                 android:paddingBottom="@dimen/_16px_in720p"
            android:onClick="true"
        	android:padding="@dimen/_20px_in720p" >
		        
		    <Button
		        android:id="@+id/btn_to_more"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
        		android:textSize="@dimen/_50px_in720p"
		        android:text="@string/more" />
        </LinearLayout>
         
    <TextView 
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_main_msg"
        android:textSize="@dimen/_30px_in720p" /> 
    </LinearLayout>
</LinearLayout>
