<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
	<ImageView
        android:id="@+id/img_selected"
        android:layout_width="@dimen/_6px_in720p"
        android:layout_height="fill_parent"
        android:layout_marginBottom="@dimen/_2px_in720p"
        android:layout_marginRight="@dimen/_16px_in720p"
        android:layout_marginTop="@dimen/_2px_in720p"
        android:background="@color/blue1"
        android:scaleType="fitCenter"
        android:visibility="invisible" 
        android:contentDescription="@string/content_null" />
	
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="@dimen/_16px_in720p" >
	    
	    <RelativeLayout 
            android:id="@+id/item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_16px_in720p"
            android:paddingTop="@dimen/_16px_in720p" >
	        
	        <ImageButton
                android:id="@+id/btn_add_to_list"
                android:layout_width="@dimen/_54px_in720p"
                android:layout_height="@dimen/_54px_in720p"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:padding="@dimen/_8px_in720p"
                android:scaleType="fitCenter"
                android:src="@drawable/list_btn_add" 
                android:contentDescription="@string/content_null" />
	        
	        <LinearLayout 
                android:id="@+id/lay_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16px_in720p"
                android:layout_marginRight="@dimen/_16px_in720p"
                android:layout_toLeftOf="@+id/btn_more"
                android:layout_toRightOf="@+id/btn_add_to_list"
                android:background="@drawable/btn_selector2"
                android:orientation="vertical" >
	            
	            <TextView
                    android:id="@+id/txt_name"
                    style="@style/font_middle_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtSinger"
                    style="@style/font_small_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
	        </LinearLayout>
	        
	        <ImageButton
                android:id="@+id/btn_more"
                android:layout_width="@dimen/_84px_in720p"
                android:layout_height="@dimen/_84px_in720p"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_selector2"
                android:padding="@dimen/_20px_in720p"
                android:scaleType="fitCenter"
                android:src="@drawable/btn_more" 
                android:contentDescription="@string/content_null" />
	    </RelativeLayout>
	    
	    <LinearLayout 
            android:id="@+id/expandable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#3E3A39"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_16px_in720p"
            android:paddingTop="@dimen/_16px_in720p"
            android:baselineAligned="false" >
	        
	        <LinearLayout 
                android:id="@+id/layout_play_fav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_selector2"
                android:onClick="true"
                android:orientation="vertical" >
	            
				<ImageView 
                    android:id="@+id/img_fav"
                    android:layout_width="@dimen/_46px_in720p"
                    android:layout_height="@dimen/_46px_in720p"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_4px_in720p"
                    android:src="@drawable/list_btn_fav" 
                android:contentDescription="@string/content_null" />
				
				<TextView
                    android:id="@+id/txt_fav"
                    style="@style/font_small_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/addFavorite" />
	        </LinearLayout>
	        
	        <LinearLayout
                android:id="@+id/btn_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_selector2"
                android:onClick="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_download"
                    android:layout_width="@dimen/_46px_in720p"
                    android:layout_height="@dimen/_46px_in720p"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_4px_in720p"
                    android:src="@drawable/list_btn_download" 
                android:contentDescription="@string/content_null" />

                <TextView
                    android:id="@+id/txt_download"
                    style="@style/font_small_white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/download" />
            </LinearLayout>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>
